crates/vega-codegen/tests/compile_errors/too_many_dimensions.rs
vega_codegen::algebra!(10);

fn main() {
    eprintln!("This is nothing");
}
